Fix _hightlight word-wrap

--- a/src/styl/objects/_objects.hightlight.styl
+++ b/src/styl/objects/_objects.hightlight.styl
@@ -18,6 +18,10 @@ pre
       line-height 1.5rem
       font-family 'Monaco','Consolas','Menlo',monospace
 
+.highlight
+  +above('m')
+    word-wrap break-word
+
 .highlight .hll { background-color: #ffffcc }
 .highlight .c { color: #999988; font-style: italic } /* Comment */
 .highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
